# pgvector

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile-fly  Dockerfile.alpine  FLY.md  LICENSE  META.json  Makefile  Makefile.win  README.md  alpine.Dockerfile  ivfbuild.c  ivfkmeans.c  ivfutils.c  svector.control  vector--0.1.0--0.1.1.sql  vector--0.1.0-0.1.1.sql  vector--0.1.0.sql  vector--0.1.1.sql  vector.control
.github/workflows/: build-image.yml  build.yml  docker.yml  release_docker_image.yml
expected/: cast.out  functions.out  ivfflat_cosine.out  ivfflat_ip.out  ivfflat_l2.out  ivfflat_unlogged.out
sql/: CMakeLists.txt  btree.sql  cast.sql  functions.sql  ivfflat_cosine.sql  ivfflat_l2.sql  svector--0.0.0--0.1.1.sql  svector--0.1.1--0.1.2.sql  svector--0.1.2--0.2.0.sql  svector--0.2.0--0.2.1.sql  svector--0.2.1--0.2.2.sql  svector--0.2.2--0.3.0.sql  svector--0.3.0--0.3.10.sql  svector--0.3.10--0.3.11.sql  svector--0.3.11--0.3.12.sql  svector--0.3.12--0.3.13.sql  svector--0.3.13--0.4.1.sql  svector--0.4.1--0.4.2.sql  svector--0.4.2--0.4.3.sql  svector--0.4.3--0.4.4.sql  svector--0.4.4--0.4.5.sql  svector--0.4.5--0.5.1.sql  svector--0.5.1--0.5.2.sql  svector--0.5.2--0.5.3.sql  svector--0.5.3-0.5.4.sql  svector.sql  vector--0.1.1--0.1.2.sql  vector--0.1.1--0.1.3.sql  vector--0.1.2.sql  vector--0.1.3--0.1.4.sql  vector--0.1.4--0.1.5.sql  vector--0.1.5--0.1.6.sql  vector--0.1.6--0.1.7.sql  vector--0.1.7--0.1.8.sql  vector--0.1.8--0.2.0.sql  vector--0.2.0--0.2.1.sql  vector--0.2.1--0.2.2.sql  vector--0.2.2--0.2.3.sql  vector--0.2.3--0.2.4.sql  vector--0.2.4--0.2.5.sql  (+31 more)
src/: CMakeLists.txt  bitutils.c  bitutils.h  bitvec.c  bitvec.h  bitvector.c  bitvector.h  float4.c  half.c  half.h  halfutils.c  halfutils.h  halfutils_avx512.c  halfutils_avx512.h  halfvec.c  halfvec.h  hnsw.c  hnsw.h  hnswbuild.c  hnswinsert.c  hnswscan.c  hnswutils.c  hnswvacuum.c  int8utils.c  int8utils.h  int8vec.c  int8vec.h  intvec.c  intvec.h  ivfbuild.c  ivfflat.c  ivfflat.h  ivfinsert.c  ivfkmeans.c  ivfscan.c  ivfutils.c  ivfvacuum.c  minivec.c  minivec.h  shnsw.c  (+42 more)
src/common/: ivf_list.c  ivf_list.h  ivf_options.c  ivf_options.h  metadata.c  metadata.h
src/fixed_point/: ivf_sq.c  ivf_sq.h  scalar_quantizer.c  scalar_quantizer.h
t/: 001_wal.pl
test/: runtests.sh
test/expected/: aggregate.out  bit.out  bit_functions.out  btree.out  btree_halfvec.out  btree_sparsevec.out  btree_vector.out  cast.out  copy.out  functions.out  half.out  halfvec.out  halfvec_functions.out  halfvec_functions_fp16.out  halfvec_input.out  hnsw_bit.out  hnsw_bit_hamming.out  hnsw_cosine.out  hnsw_dim.out  hnsw_halfvec.out  hnsw_halfvec_cosine.out  hnsw_halfvec_ip.out  hnsw_halfvec_l1.out  hnsw_halfvec_l2.out  hnsw_hamming.out  hnsw_int8vec.out  hnsw_intvec.out  hnsw_intvec_cosine.out  hnsw_intvec_ip.out  hnsw_intvec_l2.out  hnsw_ip.out  hnsw_jaccard.out  hnsw_l1.out  hnsw_l2.out  hnsw_options.out  hnsw_relaxed.out  hnsw_sparsevec.out  hnsw_sparsevec_cosine.out  hnsw_sparsevec_ip.out  hnsw_sparsevec_l1.out  (+63 more)
test/python/: ask.py  generate_and_save.py
test/sql/: aggregate.sql  bit.sql  bit_functions.sql  btree.sql  btree_halfvec.sql  btree_sparsevec.sql  btree_vector.sql  cast.sql  copy.sql  functions.sql  half.sql  halfvec.sql  halfvec_functions.sql  halfvec_functions_fp16.sql  halfvec_input.sql  hnsw_bit.sql  hnsw_bit_hamming.sql  hnsw_cosine.sql  hnsw_dim.sql  hnsw_halfvec.sql  hnsw_halfvec_cosine.sql  hnsw_halfvec_ip.sql  hnsw_halfvec_l1.sql  hnsw_halfvec_l2.sql  hnsw_hamming.sql  hnsw_int8vec.sql  hnsw_intvec.sql  hnsw_intvec_cosine.sql  hnsw_intvec_ip.sql  hnsw_intvec_l2.sql  hnsw_ip.sql  hnsw_jaccard.sql  hnsw_l1.sql  hnsw_l2.sql  hnsw_options.sql  hnsw_relaxed.sql  hnsw_sparsevec.sql  hnsw_sparsevec_cosine.sql  hnsw_sparsevec_ip.sql  hnsw_sparsevec_l1.sql  (+64 more)
test/t/: 001_ivfflat_wal.pl  001_wal.pl  002_ivfflat_vacuum.pl  002_vacuum.pl  003_ivfflat_build_recall.pl  003_ivfflat_recall.pl  003_ivfflat_vector_build_recall.pl  003_recall.pl  004_centers.pl  004_ivfflat_vector_insert_recall.pl  008_avg.pl  (+112 more)
(+9 files in other folders)
