
INSTALL(
    FILES ${CMAKE_SOURCE_DIR}/sql/${PROJECT_NAME}.sql 
    DESTINATION ${CMAKE_PREFIX_PATH}/share/extension
    RENAME ${PROJECT_NAME}--${PROEJCT_VERSION}.sql)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/sql/ 
    DESTINATION ${CMAKE_PREFIX_PATH}/share/extension 
    FILES_MATCHING PATTERN "*.sql")